--- a/kadai2.html
+++ b/kadai2.html
@@ -21,8 +21,11 @@
             </li>
         </ul>
 
-        <h1>リンク</h1>
-        <a href="https://www.google.co.jp/">google</a>
+        <h2>リンク</h2>
+
+        <ul>
+            <li> <a href="https://www.google.co.jp/">google</a></li>
+         </ul>
 
     </body>
 </html>
